--- a/style.css
+++ b/style.css
@@ -3,3 +3,14 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    background-color: #242333;
+     color: white; 
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    font-family: 'lato', sans-serif;
+}
