--- a/style.css
+++ b/style.css
@@ -41,6 +41,15 @@ body {
     border-top-right-radius: 10px;
 }
 
+.seat.selected {
+    background-color: #6feaf6;
+}
+
+.seat.occupied {
+    background-color: #ffffff;
+}
+
 .row {
     display: flex; 
 }
+
