--- a/style.css
+++ b/style.css
@@ -45,6 +45,14 @@ body {
     background-color: #6feaf6;
 }
 
+.seat:nth-of-type(2) {
+    margin-right: 18px; 
+}
+
+.seat:nth-last-of-type(2) {
+    margin-left: 18px; 
+}
+
 .seat.occupied {
     background-color: #ffffff;
 }
