--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ body {
     background-color: #6feaf6;
 }
 
+.seat.occupied {
+    background-color: #ffffff;
+}
+
 .seat:nth-of-type(2) {
     margin-right: 18px; 
 }
@@ -53,8 +57,14 @@ body {
     margin-left: 18px; 
 }
 
-.seat.occupied {
-    background-color: #ffffff;
+.seat:not(.occupied):hover {
+    cursor: pointer; 
+    transform: scale(1.2); 
+}
+
+.showcase .seat:not(.occupied):hover {
+    cursor: default; 
+    transform: scale(1); 
 }
 
 .row {
