--- a/style.css
+++ b/style.css
@@ -77,6 +77,13 @@ body {
     justify-content: space-between;
 }
 
+.showcase li {
+    display: flex; 
+    align-items: centers;
+    justify-content: center;
+    margin: 0 10px; 
+}
+
 .row {
     display: flex; 
 }
