Adding Colors To 0

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 
 .container {
     perspective: 1000px;
+    margin-bottom: 30px;
 }
 
 .seat {
@@ -104,4 +105,8 @@ body {
     transform: rotateX(-45deg);
     box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
 
+}
+
+p.text span {
+    color: #6feaf6; 
 }
